--- a/content/assets/stylesheets/bootstrap_custom.css.less
+++ b/content/assets/stylesheets/bootstrap_custom.css.less
@@ -1,1 +1,3 @@
 @import "../../../vendor/assets/stylesheets/bootstrap/less/bootstrap.less";
+@import "../../../vendor/assets/stylesheets/bootswatch/united/variables.less";
+@import "../../../vendor/assets/stylesheets/bootswatch/assets/less/bootswatch.less";
