--- a/layouts/sidebar.html.haml
+++ b/layouts/sidebar.html.haml
@@ -15,5 +15,4 @@
             = render("_sidebar")
     .container
       #footer
-        %footer
-          %p &copy; Company 2013
+        = render("_footer")
