--- a/layouts/default.html.haml
+++ b/layouts/default.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     = render("_html_header")
-  %body
+  %body#top
     -# We can also use .navbar-inverse  instead of .navbar-default, which changes the color of navbar.
     .navbar.navbar-default.navbar-fixed-top
       = render("_navbar")
