--- a/layouts/sidebar.html.haml
+++ b/layouts/sidebar.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     = render("_html_header")
-  %body
+  %body#top
     .navbar.navbar-default.navbar-fixed-top
       = render("_navbar")
     .container#container-main-sidebar
