--- a/layouts/_navbar.html.haml
+++ b/layouts/_navbar.html.haml
@@ -1,57 +1,35 @@
 .container
   .navbar-header
-    %a.navbar-brand{:href => "../"} Bootswatch
-    %button.navbar-toggle{"data-target" => "#navbar-main", "data-toggle" => "collapse", :type => "button"}
+    %a.navbar-brand{ :href => "/" } nanoc-bootswatch-example
+    %button.navbar-toggle{ "data-target" => "#navbar-main", "data-toggle" => "collapse", :type => "button" }
       %span.icon-bar
       %span.icon-bar
       %span.icon-bar
   #navbar-main.navbar-collapse.collapse
     %ul.nav.navbar-nav
       %li.dropdown
-        %a#themes.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-          Themes
+        %a#themes.dropdown-toggle{ "data-toggle" => "dropdown", :href => "#" }
+          Examples
           %span.caret
-        %ul.dropdown-menu{"aria-labelledby" => "themes"}
+        %ul.dropdown-menu{ "aria-labelledby" => "themes" }
           %li
-            %a{:href => "../default/", :tabindex => "-1"} Default
+            %a{ :href => "/example/default/", :tabindex => "-1" } Default
           %li.divider
           %li
-            %a{:href => "../amelia/", :tabindex => "-1"} Amelia
-          %li
-            %a{:href => "../cerulean/", :tabindex => "-1"} Cerulean
-          %li
-            %a{:href => "../cosmo/", :tabindex => "-1"} Cosmo
-          %li
-            %a{:href => "../cyborg/", :tabindex => "-1"} Cyborg
-          %li
-            %a{:href => "../flatly/", :tabindex => "-1"} Flatly
-          %li
-            %a{:href => "../journal/", :tabindex => "-1"} Journal
-          %li
-            %a{:href => "../readable/", :tabindex => "-1"} Readable
-          %li
-            %a{:href => "../simplex/", :tabindex => "-1"} Simplex
-          %li
-            %a{:href => "../slate/", :tabindex => "-1"} Slate
-          %li
-            %a{:href => "../spacelab/", :tabindex => "-1"} Spacelab
-          %li
-            %a{:href => "../united/", :tabindex => "-1"} United
+            %a{ :href => "/example/sidebar/", :tabindex => "-1" } Sidebar
       %li
-        %a{:href => "../help/"} Help
-      %li
-        %a{:href => "http://news.bootswatch.com"} Blog
+        %a{ :href => "https://github.com/ytaka/nanoc-bootswatch-example" } Repository
       %li.dropdown
-        %a#download.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-          Download
+        %a#download.dropdown-toggle{ "data-toggle" => "dropdown", :href => "#" }
+          Links
           %span.caret
-        %ul.dropdown-menu{"aria-labelledby" => "download"}
+        %ul.dropdown-menu{ "aria-labelledby" => "download" }
           %li
-            %a{:href => "./bootstrap.min.css", :tabindex => "-1"} bootstrap.min.css
+            %a{ :href => "./", :tabindex => "-1" } link 1
           %li
-            %a{:href => "./bootstrap.css", :tabindex => "-1"} bootstrap.css
+            %a{ :href => "./", :tabindex => "-1" } link 2
     %ul.nav.navbar-nav.navbar-right
       %li
-        %a{:href => "http://builtwithbootstrap.com/", :target => "_blank"} Built With Bootstrap
+        %a{ :href => "http://getbootstrap.com/", :target => "_blank" } Bootstrap
       %li
-        %a{:href => "https://wrapbootstrap.com/?ref=bsw", :target => "_blank"} WrapBootstrap
+        %a{ :href => "http://bootswatch.com/", :target => "_blank" } Bootswatch
