--- a/layouts/sidebar.html.haml
+++ b/layouts/sidebar.html.haml
@@ -3,16 +3,13 @@
   %head
     = render("_html_header")
   %body#top
-    .navbar.navbar-default.navbar-fixed-top
-      = render("_navbar")
-    .container#container-main-sidebar
-      .row#main-content#left-of-sidebar
+    = render("_navbar")
+    #container-main-sidebar.container
+      #main-content.row
         .col-xs-12.col-sm-12.col-md-8
           #main
             = yield
         .col-xs-12.col-sm-12.col-md-4
           #sidebar
             = render("_sidebar")
-    .container
-      #footer
-        = render("_footer")
+    = render("_footer")
