--- a/layouts/_footer.html.haml
+++ b/layouts/_footer.html.haml
@@ -1,25 +1,27 @@
-%footer
-  .row
-    .col-lg-12
-      %ul.list-unstyled
-        %li.pull-right
-          %a{:href => "#top"} Back to top
-        %li
-          %a{ :href => "https://github.com/ytaka/nanoc-bootswatch-example" } Repository
-        %li
-          %a{ :href => "http://getbootstrap.com/", :target => "_blank" } Bootstrap
-        %li
-          %a{ :href => "http://bootswatch.com/", :target => "_blank" } Bootswatch
-      %p
-        Based on
-        %a{ :href => "http://getbootstrap.com" }
-          Bootstrap
-        and
-        = succeed "." do
-          %a{ :href => "http://bootswatch.com/" }
-            Bootswatch
-      %p
-        Sidebar is controlled by
-        = succeed "." do
-          %a{:href => "https://github.com/cyokodog/jquery.ex-flex-fixed"}
-            jquery.ex-flex-fixed
+.container
+  #footer
+    %footer
+      .row
+        .col-lg-12
+          %ul.list-unstyled
+            %li.pull-right
+              %a{:href => "#top"} Back to top
+            %li
+              %a{ :href => "https://github.com/ytaka/nanoc-bootswatch-example" } Repository
+            %li
+              %a{ :href => "http://getbootstrap.com/", :target => "_blank" } Bootstrap
+            %li
+              %a{ :href => "http://bootswatch.com/", :target => "_blank" } Bootswatch
+          %p
+            Based on
+            %a{ :href => "http://getbootstrap.com" }
+              Bootstrap
+            and
+            = succeed "." do
+              %a{ :href => "http://bootswatch.com/" }
+                Bootswatch
+          %p
+            Sidebar is controlled by
+            = succeed "." do
+              %a{:href => "https://github.com/cyokodog/jquery.ex-flex-fixed"}
+                jquery.ex-flex-fixed
