--- a/layouts/_html_header.html.haml
+++ b/layouts/_html_header.html.haml
@@ -2,5 +2,5 @@
   = @item[:title] || "No title"
 %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
 %meta{:charset => "utf-8"}/
-%link{ :rel => "stylesheet", :type => "text/css", :href => stylesheet_path("application"), :media => "screen" }
-%script{ :type => "text/javascript", :src => javascript_path('application') }
+%link{ :rel => "stylesheet", :type => "text/css", :href => asset_path("application.css"), :media => "screen" }
+%script{ :type => "text/javascript", :src => asset_path("application.js") }
