Add layout of left sidebar

--- a/layouts/_navbar.html.haml
+++ b/layouts/_navbar.html.haml
@@ -17,7 +17,10 @@
               %a{ :href => "/example/default/", :tabindex => "-1" } Default
             %li.divider
             %li
-              %a{ :href => "/example/sidebar/", :tabindex => "-1" } Sidebar
+              %a{ :href => "/example/sidebar-right/", :tabindex => "-1" } Right idebar
+            %li.divider
+            %li
+              %a{ :href => "/example/sidebar-left/", :tabindex => "-1" } Left sidebar
         %li
           %a{ :href => "https://github.com/ytaka/nanoc-bootswatch-example" } Repository
         %li.dropdown
